# Aoc24

./: CMakeLists.txt  colors.h  common.cpp  common.h  main.cpp  run.sh
days/: Day01.cpp  Day01.h  Day02.cpp  Day02.h  Day03.cpp  Day03.h  Day04.cpp  Day04.h  Day05.cpp  Day05.h  Day06.cpp  Day06.h  Day07.cpp  Day07.h  Day08.cpp  Day08.h  Day09.cpp  Day09.h  Day10.cpp  Day10.h  Day11.cpp  Day11.h  Day12.cpp  Day12.h  Day13.cpp  Day13.h  DayBase.h
